Quick port to Monarch

--- a/TM/.gitignore
+++ b/TM/.gitignore
@@ -1,59 +1,51 @@
+freemem.tmc
+TMbase.genui
+TMbase.tbl
 plantcol.cc
 tm.dac
-plantcoloui.c
-plantcoloui.o
+plantcoloui.cc
 plantcol.o
 SB.o
+plantcoloui.o
 plantcmd.cc
 plantcmd.dat
+plantcmd.h
 plantsrvr.o
-plantsrvroui.c
+plantsrvroui.cc
 plantsrvroui.o
-Planttbl.tmc
-plantdisp.cc
-plantdispoui.c
-plantdispoui.o
-plantdisp.o
 Planttblnc.tmc
 plantdispnc.cc
-plantdispncoui.c
-plantdispncoui.o
+plantdispncoui.cc
 plantdispnc.o
-plantrtgext.cc
-plantrtgextoui.c
-plantrtgextoui.o
-plantrtgext.o
+plantdispncoui.o
 doit.dep
-plantsws.tma
+plantalgosws.tma
 plantalgoa.tmc
 plantalgo.cc
-plantalgooui.c
-plantalgooui.o
+plantalgooui.cc
 plantalgo.o
-plantclt.o
-plantcltoui.c
-plantcltoui.o
+plantalgooui.o
 plantcltnc.o
-plantcltncoui.c
+plantcltncoui.cc
 plantcltncoui.o
 plantengext.cdf
 plantengextcdf.oui
 plantengextcdf.tmc
 plantengext.cc
-plantengextoui.c
-plantengextoui.o
+plantengextoui.cc
 plantengext.o
-Planttbl.tmc.dep
+plantengextoui.o
 Planttblnc.tmc.dep
 *.err
+freemem.tmc
+TMbase.genui
+TMbase.tbl
 Makefile
+*.exe
 plantcol
 plantsrvr
-plantdisp
 plantdispnc
-plantrtgext
 doit
 plantalgo
-plantclt
 plantcltnc
 plantengext
