--- a/TM/Experiment.config
+++ b/TM/Experiment.config
@@ -1,7 +1,7 @@
 Experiment=Plant
 FlightNode=plantvm
 HomeDir=/home/plant
-EXP_NODES="plantvm nortvm650a fldqnx6 jsvm"
+# EXP_NODES="plantvm nortvm650a fldqnx6 jsvm"
 SCRIPT_OVERRIDE=script
 LogFiles="*.log ../flight/flight.sh.log"
 RunLog=saverun.log
